Classe Main funcional + Pasta sql no padrão MVC

--- a/Modulo1_Projeto/build.gradle
+++ b/Modulo1_Projeto/build.gradle
@@ -10,9 +10,13 @@ repositories {
 }
 
 dependencies {
+    implementation 'net.datafaker:datafaker:2.0.0'  // Dependência do JFaker
+    implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'mysql:mysql-connector-java:8.0.33'
-
 }
 
+test {
+    useJUnitPlatform()
+}
