--- a/Modulo1_Projeto/build.gradle
+++ b/Modulo1_Projeto/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'nz.ac.waikato.cms.weka:weka-stable:3.8.6'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 test {
